# uni_fu_robotik

./: .gitattributes  readme.md
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/lib/pkgconfig/: assignment2_publisher_subscriber.pc
devel/share/assignment2_publisher_subscriber/cmake/: assignment2_publisher_subscriberConfig.cmake
latex_src/: u2.tex  u4.tex  vorlage.tex
src/: usefull_commands
src/assignment2_publisher_subscriber/: package.xml
src/assignment2_publisher_subscriber/src/: publisher.py  subscriber.py
src/assignment3_parking_maneuver/src/simple_drive_control/: CMakeLists.txt  package.xml
src/assignment3_parking_maneuver/src/simple_drive_control/src/: drive_control.py
src/assignment3_parking_maneuver/src/simple_drive_control/srv/: DrivingManeuver.srv
src/assignment3_parking_maneuver/src/simple_parking_maneuver/src/: parking_maneuver.py
src/assignment4/src/: subscriberclass.py
src/assignment5/src/: drive_car.py  wheelspeedClass.py
src/assignment6/src/: node.py
src/assignment7/pdf/: empty.world
src/assignment7/src/: main.py
src/assignment8_RANSAC/rosfiles/: lane-detection.bag
src/assignment8_RANSAC/src/: main.py
src/assignment9/src/: main.py  test_drive_car.py
